<resources>
    <string name="app_name">AppChamadaInterface</string>
    <string name="main_professor">Professor</string>
    <string name="main_student">Aluno</string>
    <string name="generic_name">Maria Vieira</string>
    <string name="logout">Deslogar</string>
    <string name="home">Página Inicial</string>
    <string name="subject_code">Código da disciplina</string>
    <string name="hint_code">Código</string>
    <string name="subject_name">Nome</string>
    <string name="hint_name">Nome da disciplina</string>
    <string name="classes">Aulas</string>
    <string name="subject_missed_classes">Número de faltas:</string>
    <string name="subject_max_missed_classes">Número máximo de faltas:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Aluno -->
    <string name="subject_enroll">Inscreva-se em uma disciplina</string>
    <string name="subject_enroll_confirm">Inscrever-se</string>

    <!-- Professor -->
    <string name="subject_registration">Cadastrar disciplina</string>
    <string name="subject_registration_confirm">Cadastrar</string>
    <string name="subject_schedule">Dias da semana e horários</string>

    <!-- Image Content Description -->
    <string name="next_screen">Pŕoxima página</string>
    <string name="profile_picture">Foto de perfil</string>
    <string name="calendar">Calendário</string>
    <string name="export">Exportar</string>
    <string name="subjects">Disciplinas</string>
    <string name="reports">Relatórios</string>
    <string name="profile">Perfil</string>
    <string name="about">Sobre</string>
    <string name="por_aula">Por Aula</string>
    <string name="por_periodo">Por Período</string>
    <string name="porcentagem">Porcentagem</string>
    <string name="info_project">Projeto desenvolvido para a disciplina de Programação 3, do curso de Sistemas da Informação, no Centro de Informática (UFPE).</string>
    <string name="info_dev">Desenvolvido por Miriane Silva (mstn) e Nara Souza (nsa2).</string>

</resources>
