<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/subject"
            android:title="@string/subjects"
            android:icon="@drawable/ic_subject_white_96dp"/>
        <item
            android:id="@+id/reports"
            android:title="@string/reports"
            android:icon="@drawable/ic_chart_white_96dp"/>
        <item
            android:id="@+id/about"
            android:title="@string/about"
            android:icon="@drawable/ic_info_white_96dp"/>

        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout_white_96dp"/>
    </group>
</menu>