<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ReportActivity">

    <TextView
        android:id="@+id/tv_professor_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reports"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/aladin"/>

    <View android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:id="@+id/buttonsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/por_aula"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/por_periodo"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonPorcentagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/porcentagem"/>
    </LinearLayout>

</RelativeLayout>