<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/about"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/aladin"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@color/colorGray"/>

    <TextView
        android:id="@+id/tv_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/divider"
        android:layout_marginStart="80dp"
        android:textAlignment="center"
        android:text="@string/info_project"/>

    <TextView
        android:id="@+id/tv_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tv_infos"
        android:layout_marginStart="80dp"
        android:textAlignment="center"
        android:text="@string/info_dev"/>

</RelativeLayout>