<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SubjectDetailActivity"
        android:layout_margin="10dp">

    <TextView
            android:id="@+id/tv_subject_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:id="@+id/tv_missed_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_missed_classes"
            android:layout_below="@id/tv_subject_title"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"/>

    <TextView
            android:id="@+id/tv_max_missed_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_max_missed_classes"
            android:layout_below="@id/tv_missed_classes"
            android:layout_alignParentEnd="true"/>

    <TextView
            android:id="@+id/tv_classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes"
            android:layout_below="@id/tv_max_missed_classes"
            android:layout_marginTop="20dp"/>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_subject_classes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_classes"
            android:layout_marginTop="20dp"/>

</RelativeLayout>